--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,13 @@ python-socketio==1.9.0
 six==1.11.0
 Werkzeug==0.14.1
 WTForms==2.2.1
+decorator==4.4.2
+Flask-SQLAlchemy==2.4.1
+infinity==1.4
+intervals==0.8.1
+SQLAlchemy==1.3.13
+SQLAlchemy-Utils==0.36.1
+validators==0.14.2
+WTForms-Alchemy==0.16.9
+WTForms-Components==0.10.4
+Flask-Login==0.5.0
